The issue that modal wasn't working on safari is fixed, modal codes replaced to new one

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,9 @@ body {
   display: none;
 }
 
+
+dialog::backdrop {
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(54, 54, 54, 0.5));
+  backdrop-filter: blur(3px);
+}
+  
